Testing old and new testament tabs
Testing old and new testament tabs

--- a/Bible Prototype/index.html
+++ b/Bible Prototype/index.html
@@ -20,6 +20,16 @@
 
 <body>
   <div class="container">
+    <h3>Tabs</h3>
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#">Old Testament</a></li>
+      <li><a href="#">New Testament</a></li>
+    </ul>
+    <br>
+    <p><strong>Note:</strong> This example shows how to create a basic navigation tab. It is not toggleable/dynamic yet (you can't click on the links to display different content)- see the last example in the Bootstrap Tabs and Pills Tutorial to find out how this can be done.</p>
+  </div>
+  
+  <div class="container">
     <div class="row">
       <div class="col-md-4 card">
         <div class="wrapper">
